snake/snake-style.css
*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
}

body {
  overflow-x: hidden;
  height: 100vh;
  width: 100vw;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgb(255, 255, 255);
}

#board {
  background: rgb(241, 241, 241);
  display: grid;
  grid-template-rows: repeat(23, 1fr);
  grid-template-columns: repeat(23, 1fr);
  width: 100vmin;
  height: 100vmin;
  position: relative;
  transition: all 0.5s ease-in-out;
}
#board .overlay {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: #fff;
  opacity: 0;
  transition: all 0.5s ease-in-out;
  z-index: 5;
}
.game-over {
  pointer-events: none;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  transition: all 0.5s ease-in-out;
  z-index: 10;
}
.game-over h2 {
  text-transform: uppercase;
  color: rgb(60, 109, 201);
  margin-bottom: 10px;
}
.game-over button {
  color: #fff;
  background: rgb(224, 79, 79);
  outline: 0;
  border: none;
  padding: 10px 20px;
  font-size: 16px;
  text-transform: uppercase;
  cursor: pointer;
}
.snake {
  background: rgb(60, 109, 201);
  border: 0.25vmin solid #fff;
}
.food {
  background: rgb(224, 79, 79);
  border: 0.25vmin solid #fff;
}
.eaten {
  position: relative;
}
.eaten::after {
  content: '';
  position: absolute;
  /* top: 1.6vmin;
  left: 1.6vmin;
  width: 1.3vmin;
  height: 1.3vmin; */
  top: 0.25vmin;
  left: 0.25vmin;
  bottom: 0.25vmin;
  right: 0.25vmin;
  border: 2px solid rgb(224, 79, 79);
  /* background: rgb(224, 79, 79); */
  /* border: 0.25vmin solid #000; */
}

#board.lost .game-over {
  pointer-events: all;
  opacity: 1;
}

#board.lost .overlay {
  opacity: 0.6;
}

